--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,103 @@ ul {
     padding-right: 32px;
     margin: auto;
 }
+
+
+/* FOUR-CARD */
+
+.four-card {
+    width: 100%;
+    height: 100%;
+    background-color: #FAFAFA;
+    font-family: var(--poppins);
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.four-card__headline {
+   text-align: center;
+   margin-bottom: 64px;
+}
+.four-card__subtitle {
+    font-size: 36px;
+    font-weight: 300;
+    color: var(--grey);
+
+}
+.four-card__title {
+    font-size: 36px;
+    font-weight: 600;
+    color: var(--grey);
+    margin-bottom: 13px;
+    letter-spacing: 0.25px;
+}
+.four-card__text {
+    max-width: 540px;
+    width: 100%;
+    color: var(--grey);
+    font-size: 15px;
+    line-height: 25px; 
+    letter-spacing: 0.104px;
+    margin: auto;
+}
+
+.four-card__main {
+    display: flex;
+    column-gap: 30px;
+    align-items: center;
+}
+.card {
+    max-width: 350px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.50);
+    padding: 32px;
+    position: relative;
+}
+.four-card__content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+}
+.card-line {
+    width: 100%;
+    height: 4px;
+    background-color: var(--aqua);
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.card:nth-child(1) .card-line{
+    background-color: var(--aqua) !important;
+}
+
+.card:nth-child(2) .card-line{
+    background-color: var(--orange) !important;
+}
+.card:nth-child(3) .card-line{
+    background-color: var(--blue) !important;
+}
+
+.card-name {
+    color: var(--grey);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+.card-desc {
+    color: var(--grey);
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0.09px;
+    margin-bottom: 40px;
+}
+.four-card__icon {
+   width: 64px;
+   height: 64px;
+   object-fit: cover;
+}
+
+/* FOUT-CARD */
